<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.markiewb.netbeans.plugins</groupId>
    <artifactId>AdditionalHints</artifactId>
    <version>1.6.0.2</version>
    <packaging>nbm</packaging>

    <name>Additional Java hints</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <netbeans.version>RELEASE74</netbeans.version>
        <netbeans.run.params.ide/>
        <!--<netbeans.run.params>-J-javaagent:"${current.jrebel.agent.path}" -J-Drebel.log=true ${netbeans.run.params.ide}</netbeans.run.params>-->
    </properties>
    <organization>
        <name>Benno Markiewicz (benno.markiewicz@googlemail.com)</name>
    </organization>
    <url>https://github.com/markiewb/nb-additional-hints</url>

    <repositories>
        <!--
        Repository hosting NetBeans modules, especially APIs.
        Versions are based on IDE releases, e.g.: RELEASE691
        To create your own repository, use: nbm:populate-repository
        -->
        <repository>
            <id>netbeans</id>
            <name>NetBeans</name>
            <url>http://bits.netbeans.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-annotations-common</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-spi-editor-hints</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-loaders</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-source</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>nb-javac-api</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-spi-java-hints</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-lookup</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-awt</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-hints-test</artifactId>
            <version>${netbeans.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.netbeans.modules</groupId>
            <artifactId>org-netbeans-lib-nbjavac</artifactId>
            <version>${netbeans.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-libs-javacapi</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-libs-junit4</artifactId>
            <version>${netbeans.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-nbjunit</artifactId>
            <version>${netbeans.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>de-markiewb-netbeans-plugins-hints-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>nbm-maven-plugin</artifactId>
                <version>3.11.1</version>
                <extensions>true</extensions>
                <configuration>
                    <!-- keep this id, else the update from existing versions will fail
                         and will cause classpath issues in the log file
                    -->
                    <codeNameBase>de.markiewb.netbeans.plugins.hints</codeNameBase>
                    <keystore>private/keystore</keystore>
                    <keystorealias>myself</keystorealias>
                    <licenseFile>CDDL-GPL-2-CP</licenseFile>
                    <licenseName>CDDL-GPL-2-CP</licenseName>
                </configuration>
            </plugin>

            <plugin>
                <!-- NetBeans 6.9+ requires JDK 6, starting NetBeans 7.4 source 1.7 will be required   -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <argLine>-Djava.endorsed.dirs=${endorsed.dir}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>endorsed</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputDirectory>${endorsed.dir}</outputDirectory>
                    <silent>true</silent>
                    <artifactItems>
                        <artifactItem>
                            <groupId>org.netbeans.api</groupId>
                            <artifactId>org-netbeans-libs-javacapi</artifactId>
                            <version>${netbeans.version}</version>
                        </artifactItem>
                        <artifactItem>
                            <groupId>org.netbeans.external</groupId>
                            <artifactId>nb-javac-api</artifactId>
                            <version>${netbeans.version}</version>
                        </artifactItem>
                        <artifactItem>
                            <groupId>org.netbeans.modules</groupId>
                            <artifactId>org-netbeans-libs-javacimpl</artifactId>
                            <version>${netbeans.version}</version>
                        </artifactItem>
                        <artifactItem>
                            <groupId>org.netbeans.external</groupId>
                            <artifactId>nb-javac-impl</artifactId>
                            <version>${netbeans.version}</version>
                        </artifactItem>
                    </artifactItems>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <!-- to have the jar plugin pickup the nbm generated manifest -->
                    <useDefaultManifestFile>true</useDefaultManifestFile>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <description>&lt;h1&gt;Additional Java hints for NetBeans IDE&lt;/h1&gt;

&lt;h2&gt;Supported Hints:&lt;/h2&gt;

&lt;ul&gt;
&lt;li&gt;"Replace '+' with 'MessageFormat.format()'"&lt;/li&gt;
&lt;li&gt;"Replace '+' with 'new StringBuilder().append()'"&lt;/li&gt;
&lt;li&gt;"Replace '+' with 'String.format()'"&lt;/li&gt;
&lt;li&gt;"Join literals"&lt;/li&gt;
&lt;li&gt;"Copy joined literals to clipboard"&lt;/li&gt;
&lt;li&gt;"Split at linebreaks"&lt;/li&gt;
&lt;li&gt;"Split at caret" (since 1.1)&lt;/li&gt;
&lt;li&gt;"Convert to assertTrue/assertFalse" (since 1.1)&lt;/li&gt;
&lt;li&gt;"Support transformation to BigDecimal constants" (since 1.1)&lt;/li&gt;
&lt;li&gt;"Remove "public abstract" modifiers from method declarations within interfaces" (since 1.1)&lt;/li&gt;
&lt;li&gt;"Remove public/abstract/final modifiers from field declarations within interfaces" (since 1.2)&lt;/li&gt;
&lt;li&gt;"Change modifiers" (since 1.2)&lt;/li&gt;
&lt;li&gt;"Convert char to string and back" (since 1.2)&lt;/li&gt;
&lt;li&gt;"Convert number in literal to number and back" (since 1.2)&lt;/li&gt;
&lt;li&gt;"Convert to StringUtils.isBlank()/StringUtils.isNotBlank()/StringUtils.isEmpty()" (since 1.2)&lt;/li&gt;
&lt;li&gt;"Convert from if/else to ternary and back" (since 1.2)&lt;/li&gt;
&lt;li&gt;"Invert ternary if/else" (since 1.2)&lt;/li&gt;
&lt;li&gt;"Report methods that have class name" (since 1.2, no transformation)&lt;/li&gt;
&lt;li&gt;"Add "this." to methods and variables" (since 1.3, disabled by default)&lt;/li&gt;
&lt;li&gt;"Detect dead instanceof-expressions" (since 1.4, no transformation)&lt;/li&gt;
&lt;li&gt;"Replace with Optional.isPresent()/Convert return null to return Optional.empty()" (since 1.5)&lt;/li&gt;
&lt;li&gt;Replace with null-assignment to Optional with Optional.empty() (since 1.6)&lt;/li&gt;
&lt;li&gt;Convert return xxx to return Optional.ofNullable(xxx)/Optional.of(xxx)/Optional.empty() (since 1.6)&lt;/li&gt;
&lt;/ul&gt;

&lt;h2&gt;Example:&lt;/h2&gt;
&lt;img src="https://raw.githubusercontent.com/markiewb/nb-additional-hints/v1.4.0/doc/screenshot.png"/&gt;

&lt;h2&gt;Updates&lt;/h2&gt;
&lt;h3&gt;1.6.0:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/55"&gt;New Fix&lt;/a&gt;]: Replace with null-assignment to Optional with Optional.empty()&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/56"&gt;New Fix&lt;/a&gt;]: Convert return xxx to return Optional.ofNullable(xxx)/Optional.of(xxx)/Optional.empty()&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/54"&gt;Updated Fix&lt;/a&gt;]: "Replace +..." works for more expressions&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/57"&gt;Updated Fix&lt;/a&gt;]: Fixed false positive result from "Convert to Optional.isEmpty()"&lt;/li&gt;
&lt;/ul&gt;
&lt;h3&gt;1.5.0:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/42"&gt;Updated Fix&lt;/a&gt;]: "Convert to if/else" now supports assignments to new variables&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/43"&gt;Updated Fix&lt;/a&gt;]: "Invert ternary"/"Convert to ternary" now support conditions without brackets&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/3"&gt;Updated Fix&lt;/a&gt;]: "Replace +..." is not proposed for erroneous conditions anymore&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/51"&gt;Updated Fix&lt;/a&gt;]: "Replace +..." works for more expressions&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/50"&gt;Updated Fix&lt;/a&gt;]: Remove false positive detected by "Detect dead instanceof"&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/56"&gt;New Fix&lt;/a&gt;]: Replace with Optional.isPresent()/Convert return null to return Optional.empty()&lt;/li&gt;
&lt;li&gt;[Task]: Update requirements JDK7 and NB7.4&lt;/li&gt;
&lt;/ul&gt;
&lt;h3&gt;1.4.0:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/44"&gt;New Hint&lt;/a&gt;]: Detect dead instanceof-expressions&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/2"&gt;Updated Fix&lt;/a&gt;]: "Replace +..." hints can now supports chars too&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/47"&gt;Meta&lt;/a&gt;]: Add donation link (for those who want to support this project)&lt;/li&gt;
&lt;/ul&gt;
&lt;h3&gt;1.3.0:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/36"&gt;Updated Fix&lt;/a&gt;]: "Invert ternary if/else" now supports more patterns&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/39"&gt;New Hint&lt;/a&gt;]: Add "this." to methods and variables (disabled by default)&lt;/li&gt;
&lt;/ul&gt;

&lt;h3&gt;1.2.0:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/pull/22"&gt;New Fix&lt;/a&gt;]: Change the modifier of a class/method/field to public/package protected/protected/private  (by &lt;a href="https://github.com/rasa-silva"&gt;rasa-silva&lt;/a&gt;)&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/24"&gt;New Fix&lt;/a&gt;]: Remove public/abstract/final modifiers from field declarations within interfaces&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/9"&gt;New Fix&lt;/a&gt;]: Convert from char and string and back&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/10"&gt;New Fix&lt;/a&gt;]: Convert number in literal to number and back&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/12"&gt;New Fix&lt;/a&gt;]: Convert to StringUtils.isBlank()/StringUtils.isNotBlank()/StringUtils.isEmpty()&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/31"&gt;New Fix&lt;/a&gt;]: Convert from if/else to ternary and back&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/32"&gt;New Fix&lt;/a&gt;]: Invert ternary if/else&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/34"&gt;New Hint&lt;/a&gt;]: Report methods that have class name&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/29"&gt;Updated Fix&lt;/a&gt;]: "Convert to assertTrue/assertFalse" now supports junit.framework.Assert too&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/20"&gt;Updated Fix&lt;/a&gt;]: "Replace +..." hints can now be configured&lt;/li&gt;
&lt;/ul&gt;

&lt;h3&gt;1.1.0:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/11"&gt;New Fix&lt;/a&gt;]: Support transformation to BigDecimal constants&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/5"&gt;New Fix&lt;/a&gt;]: Split a string at caret&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/13"&gt;New Fix&lt;/a&gt;]: Convert to assertTrue/assertFalse&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/14"&gt;New Fix&lt;/a&gt;]: Remove "public abstract" modifiers from method declarations within interfaces&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/8"&gt;Bugfix&lt;/a&gt;]: Literals with quoted Strings won't be copied properly to clipboard&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/7"&gt;Refactoring&lt;/a&gt;]: Convert to maven based module&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/18"&gt;Refactoring&lt;/a&gt;]: Hints should be proposals instead of errors/warnings&lt;/li&gt;
&lt;/ul&gt;
&lt;h3&gt;1.0.x:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-additional-hints/issues/1"&gt;Bugfix&lt;/a&gt;]: Literals with quoted Strings create uncompileable code&lt;/li&gt;
&lt;/ul&gt;
&lt;h2&gt;
&lt;a name="further-information" class="anchor" href="#further-information"&gt;&lt;span class="mini-icon mini-icon-link"&gt;&lt;/span&gt;&lt;/a&gt;Further information:&lt;/h2&gt;

&lt;p&gt;This plugin is orginally based on code from the &lt;em&gt;"I18N Checker"&lt;/em&gt; plugin from &lt;em&gt;Jan Lahoda&lt;/em&gt;.
The original sourcecode can be found at &lt;a href="http://hg.netbeans.org/main/contrib/file/tip/editor.hints.i18n"&gt;http://hg.netbeans.org/main/contrib/file/tip/editor.hints.i18n&lt;/a&gt;&lt;/p&gt;

&lt;p&gt;License remains CDDL-GPL-2-CP - &lt;a href="http://www.netbeans.org/cddl-gplv2.html"&gt;http://www.netbeans.org/cddl-gplv2.html&lt;/a&gt;&lt;/p&gt;

&lt;p&gt;
Provide defects, request for enhancements and feedback at &lt;a href=https://github.com/markiewb/nb-additional-hints/issues"&gt;https://github.com/markiewb/nb-additional-hints/issues&lt;/a&gt;
&lt;/p&gt;
&lt;p&gt;Compatible to NetBeans 7.4+ and higher&lt;/p&gt;
&lt;p&gt;
&lt;a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=K4CMP92RZELE2"&gt;&lt;img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" alt="btn_donate_SM.gif"&gt;&lt;/a&gt;

&lt;/p&gt;</description>
    <scm>
        
        <connection>scm:git:https://github.com/markiewb/nb-additional-hints.git</connection>
    </scm>
</project>
